k8s/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudforge-demo

spec:
  template:
    spec:
      containers:
        - name: cloudforge-demo
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
